[tool.poetry]
name = "streamlit-langchain-demo"
version = "0.1.0"
description = ""
authors = ["kinjo <kinjoyuji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
black = "^24.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
